# centrepass

./: .gitignore  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DEFINITIONS.md  LICENSE-MIT  README.md  package-lock.json
.github/workflows/: ci.yml
.scratch/v1/: PRD.md
.scratch/v1/issues/: 01-walking-skeleton.md  02-record-a-goal.md  03-full-taxonomy-live-coding.md  04-quarters-rosters-substitutions.md  05-post-match-stat-views.md  06-match-file-and-list-management.md  07-shorthand-import.md  08-golden-parity-and-migration.md  09-summary-image.md  10-reference-definitions-docs.md
crates/netball-core/: Cargo.toml
crates/netball-core/src/: definitions.rs  event.rs  lib.rs  match_file.rs  roster.rs  score.rs  shorthand.rs  stats.rs  taxonomy.rs
crates/netball-wasm/: Cargo.toml
crates/netball-wasm/src/: lib.rs
docs/: ROADMAP.md  quickstart.md  shorthand.md
docs/adr/: 0001-local-first-pwa.md  0002-rust-core-typescript-ui.md  0003-event-log-source-of-truth.md
docs/agents/: domain.md  triage-labels.md
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/src/: App.tsx  LiveScreen.tsx  MatchListScreen.tsx  ReferencePanel.tsx  RosterScreen.tsx  StatsScreen.tsx  engine.ts  events.ts  main.tsx  matchFile.ts  storage.ts  summaryImage.ts  wakeLock.ts
web/tests/: live-coding.spec.ts  match-file.spec.ts  offline-audit.spec.ts  post-match-stats.spec.ts  quarters-rosters.spec.ts  record-goal.spec.ts  reference.spec.ts  screenshots.spec.ts  shorthand-import.spec.ts  smoke.spec.ts  summary-image.spec.ts
(+15 files in other folders)
